# python-bazel-boilerplate

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  gazelle_python.yaml
